# navigator-search-indexer

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Dockerfile.aws.example  Dockerfile.local.example  Makefile  README.md  docker-compose.dev.yml  index_data.py  load_data.sh  pyproject.toml  text2embeddings.py
.github/: dependabot.yml  retag-and-push.sh
.github/workflows/: ci.yml  main-push-checks.yml  semver.yml  test.yml
app/: config.py  index.py  ml.py  utils.py
cli/: index_data.py  run.sh  text2embeddings.py
cli/test/: conftest.py  create_test_index.py  test_index_data.py  test_text2embeddings.py
cli/test/test_data/index_data_input/: test_html.json  test_html.npy  test_no_content_type.json  test_no_content_type.npy  test_pdf.json  test_pdf.npy
cli/test/test_data/input/: test_html.json  test_pdf.json
cli/test/test_data/text2embeddings_input/: test_html.json  test_no_content_type_translated_en.json  test_pdf.json
cli/test/test_data/text2embeddings_input_bad/: test_html.json
notebooks/: opensearch-query-example-exact.ipynb  opensearch-query-example-semantic.ipynb  opensearch-query-example.ipynb  query-load-testing.ipynb
src/: base.py  config.py  index.py  index_mapping.py  languages.py  load_data.py  ml.py  s3.py  synonyms.txt  utils.py  warm_up_model.py
src/index/: opensearch.py  vespa.py  vespa_.py
src/index/test/: conftest.py  test_opensearch_indexer.py  test_vespa.py  test_vespa_indexer.py
src/index/test/data/: CCLW.executive.10002.4495.json
src/test/: conftest.py  test_index_mapping.py  test_languages.py  test_ml.py  test_s3.py  test_utils.py
test/: test_text2embeddings.py
tests/: conftest.py  test_integration.py
tests/cli/: test_index_data.py
tests/cli/test_data/: documents_sample.csv
tests/cli/test_data/index_data_input/: test_html.json  test_html.npy  test_no_content_type.json  test_no_content_type.npy  test_pdf.json  test_pdf.npy
tests/fixtures/inference_results/: CCLW.executive.10014.4470.json
tests/fixtures/s3_files/: CCLW.document.i00000004.n0000.json  CCLW.executive.10002.4495.json  CCLW.executive.10002.4495.npy  CCLW.executive.10014.4470.json
tests/fixtures/vespa_documents/: family_document.json  search_weights.json
tests/s3_fixtures/: CCLW.document.i00000004.n0000.npy  CCLW.executive.10014.4470.json
tests/src/: conftest.py  test_utils.py  test_vespa.py
tests/src/data/: CCLW.executive.10002.4496.json
tests/vespa_test_schema/: deployment.xml  services.xml  validation-overrides.xml
tests/vespa_test_schema/rules/: acronyms.sr
tests/vespa_test_schema/schemas/: classifiers_profile.sd  classifiers_profiles.sd  concept.sd  document_passage.sd  family_document.sd  search_weights.sd
tests/vespa_test_schema/search/query-profiles/: default.xml
tests/vespa_test_schema/security/: backend_serve.pem  clients.pem  jesse_data_plane.pem  monitoring_serve.pem  pipeline_full_access.pem  pipeline_serve.pem
tests/vespa_test_schema/tests/: README.md
tests/vespa_test_schema/tests/system-test/: exact-search-test.json  hybrid-no-closeness-search-test.json  hybrid-search-test.json
