[tool.poetry]
name = "navigator-search-indexer"
version = "0.1.0"
description = ""
authors = ["CPR Tech <tech@climatepolicyradar.org>"]

[tool.poetry.dependencies]
python = "~3.9"
click = "^8.0.4"
cloudpathlib = {version = "^0.7.0", extras = ["s3"]}
cpr-data-access = {git = "https://github.com/climatepolicyradar/data-access.git", tag = "0.4.0"}
huggingface_hub = ">=0.14.0,<1.0.0"
opensearch-py = "^1.1.0"
pydantic = "^2.4.0"
python-json-logger = "^2.0.4"
pyvespa = "^0.37.1"
awscli = "^1.27.8"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
flake8 = "^4.0.1"
mypy = "^0.941"
pandas = "^1.5.1"
pre-commit = "^2.17.0"
pytest = "^7.1.1"
types-requests = "^2.28.11"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pydocstyle]
# D100 - Missing docstring in public module
# D103 - Missing docstring in public function
# D104 - Missing docstring in public package
# D107 - Missing docstring in __init__
# D202 - No blank lines allowed after function docstring
# D203 - 1 blank line required before class docstring
# D212 - Multi-line docstring summary should start at the first line
# D213 - Multi-line docstring summary should start at the second line
# D400 - First line should end with a period
# D401 - First line should be in imperative mood (Google styleguide denotes 'descriptive' style.)
# D406 - Section name should end with a newline (incompatible with Google styleguide)
# D407 - Missing dashed underline after section (incompatible with Google styleguide)
# D413 - Missing blank line after last section (incompatible with Google styleguide)
# D415 - First line should end with a period, question mark, or exclamation point
ignore = """
D100,D103,D104,D107,
D202,D203,D212,D213,
D400,D401,D406,D407,D413,D415
"""

[tool.flake8]
max-line-length = 88
extend-ignore = "E203"
