[tool.poetry]
name = "navigator-search-indexer"
version = "0.1.0"
description = ""
authors = ["CPR Tech <tech@climatepolicyradar.org>"]
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "~3.10"
click = "^8.0.4"
cloudpathlib = {version = "^0.20.0", extras = ["s3"]}
cpr-sdk = "^1.9.5"
huggingface_hub = ">=0.14.0,<1.0.0"
pydantic = "^2.10.2"
python-json-logger = "^2.0.4"
pyvespa = "^0.50.0"
tenacity = "^9.0.0"

[tool.poetry.dev-dependencies]
black = "^24.10.0"
flake8 = "^7.1.0"
mypy = "^1.13"
pre-commit = "^4.0.1"
pytest = "^8.3.4"
types-requests = "^2.32.0"
moto = "^5.0.21"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pydocstyle]
# D100 - Missing docstring in public module
# D103 - Missing docstring in public function
# D104 - Missing docstring in public package
# D107 - Missing docstring in __init__
# D202 - No blank lines allowed after function docstring
# D203 - 1 blank line required before class docstring
# D212 - Multi-line docstring summary should start at the first line
# D213 - Multi-line docstring summary should start at the second line
# D400 - First line should end with a period
# D401 - First line should be in imperative mood (Google styleguide denotes 'descriptive' style.)
# D406 - Section name should end with a newline (incompatible with Google styleguide)
# D407 - Missing dashed underline after section (incompatible with Google styleguide)
# D413 - Missing blank line after last section (incompatible with Google styleguide)
# D415 - First line should end with a period, question mark, or exclamation point
ignore = """
D100,D103,D104,D107,
D202,D203,D212,D213,
D400,D401,D406,D407,D413,D415
"""

[tool.flake8]
max-line-length = 88
extend-ignore = "E203"
